crates/strider/tests/snapshots/ppc32le__memory__array_fill.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "3" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v4" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "20" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "23" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "26" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "29" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "32" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "34" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "37" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "36" -> "37" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "7" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "34" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "41" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "42" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x1e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "50" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "36" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "44" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "36" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "56" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "57" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "60" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "62" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "62" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "68" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "70" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "70" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "8" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "71" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "75" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "75" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "9" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "76" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "78" -> "76" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "78" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "8" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
